First time working good

--- a/release.cfg
+++ b/release.cfg
@@ -34,6 +34,13 @@
 
 /* ================ Clock configuration ================ */
 var Clock = xdc.useModule('ti.sysbios.knl.Clock');
+var GateMutexPri = xdc.useModule('ti.sysbios.gates.GateMutexPri');
+var Mailbox = xdc.useModule('ti.sysbios.knl.Mailbox');
+var Queue = xdc.useModule('ti.sysbios.knl.Queue');
+
+
+var HeapBuf = xdc.useModule('ti.sysbios.heaps.HeapBuf');
+var Event = xdc.useModule('ti.sysbios.knl.Event');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
@@ -128,8 +135,8 @@ var m3Hwi = xdc.useModule('ti.sysbios.family.arm.m3.Hwi');
  *      Disabling the runtime check improves runtime performance and yields a
  *      reduced flash footprint.
  */
-//halHwi.checkStackFlag = true;
-halHwi.checkStackFlag = false;
+halHwi.checkStackFlag = true;
+//halHwi.checkStackFlag = false;
 
 /*
  * The following options alter the system's behavior when a hardware exception
@@ -198,8 +205,13 @@ var BIOS = xdc.useModule('ti.sysbios.BIOS');
  *  - false
  *      Disables asserts for a reduced code footprint and better performance.
  */
-//BIOS.assertsEnabled = true;
-BIOS.assertsEnabled = false;
+BIOS.assertsEnabled = true;
+//BIOS.assertsEnabled = false;
+
+/*
+ * Specify default heap size for BIOS.
+ */
+//BIOS.heapSize = 98304;
 
 /*
  * A flag to determine if xdc.runtime sources are to be included in a custom
@@ -271,7 +283,7 @@ var Memory = xdc.useModule('xdc.runtime.Memory');
  * variety of system and application specific memory management policies
  * implemented by the IHeap modules(Ex. HeapMem, HeapBuf).
  */
-
+ 
 /*
  * Use HeapMem primary heap instance to use linker-defined memory region
  * Add HeapTrack on top to find over-writes, invalid frees, and
@@ -292,15 +304,13 @@ Program.global.heap0 = HeapMem.create(heapMemParams);
 
 Memory.defaultHeapInstance = Program.global.heap0;
 
-
-
 /* ================ Program configuration ================ */
 /*
  *  Program.stack must be set to 0 to allow the setting
  *  of the system stack size to be determined in the example's
  *  linker command file.
  */
-Program.stack = 0;
+Program.stack = 2048;
 
 
 /*
@@ -428,11 +438,11 @@ System.extendedFormats = '%f%$S';
  *      The default SysCallback functions point to stub functions. See the
  *      SysCallback module's documentation.
  */
-//var SysMin = xdc.useModule('xdc.runtime.SysMin');
-//SysMin.bufSize = 1024;
-//System.SupportProxy = SysMin;
-var SysCallback = xdc.useModule('xdc.runtime.SysCallback');
-System.SupportProxy = SysCallback;
+var SysMin = xdc.useModule('xdc.runtime.SysMin');
+SysMin.bufSize = 256;
+System.SupportProxy = SysMin;
+//var SysCallback = xdc.useModule('xdc.runtime.SysCallback');
+//System.SupportProxy = SysCallback;
 //SysCallback.abortFxn = "&myUserAbort";
 //SysCallback.exitFxn  = "&myUserExit";
 //SysCallback.flushFxn = "&myUserFlush";
@@ -589,3 +599,6 @@ var Task = xdc.useModule('ti.sysbios.knl.Task');
 var ndkHooks = new Task.HookSet();
 ndkHooks.registerFxn = '&NDK_hookInit';
 Task.addHookSet(ndkHooks);
+BIOS.rtsGateType = BIOS.GateMutexPri;
+
+Memory.defaultHeapSize = 98304;
