Add TimeStamp module

--- a/release.cfg
+++ b/release.cfg
@@ -41,6 +41,7 @@ var Queue = xdc.useModule('ti.sysbios.knl.Queue');
 
 var HeapBuf = xdc.useModule('ti.sysbios.heaps.HeapBuf');
 var Event = xdc.useModule('ti.sysbios.knl.Event');
+var Timestamp = xdc.useModule('xdc.runtime.Timestamp');
 /*
  * Default value is family dependent. For example, Linux systems often only
  * support a minimum period of 10000 us and multiples of 10000 us.
